fix all bug on ios 26

--- a/main.css
+++ b/main.css
@@ -601,7 +601,7 @@ small::after {
 }
 
 .modal-dialog-setting {
-    max-height: 85vh;
+    max-height: 84vh;
     overflow: hidden;
     overflow-y: scroll;
     -ms-overflow-style: none;
